--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -126,10 +126,10 @@
     <bool name="config_intrusiveBatteryLed">true</bool>
 
     <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
-    <bool name="config_multiColorBatteryLed">true</bool>
+<!--    <bool name="config_multiColorBatteryLed">true</bool> -->
 
     <!-- Does the notification LED support multiple colors? Used to decide if the user can change the colors -->
-    <bool name="config_multiColorNotificationLed">true</bool>
+<!--    <bool name="config_multiColorNotificationLed">true</bool> -->
 
     <!-- Do the battery/notification LEDs support pulsing? Used to decide if we show pulse settings -->
     <bool name="config_ledCanPulse">true</bool>
@@ -314,7 +314,7 @@
 
 
     <!-- Wheter to enable doze always on -->
-    <bool name="config_enableDozeAlwaysOn">true</bool>
+  <!--  <bool name="config_enableDozeAlwaysOn">true</bool> -->
 
     <!-- Doze: should the TYPE_PICK_UP_GESTURE sensor be used as a pulse signal. -->
     <bool name="config_dozePulsePickup">true</bool>
